<resources>
    <string name="app_name">常用工具类</string>
    <string name="Title">常用工具类</string>
    <string name="Tool">工具</string>
    <string name="View">View</string>
    <string name="Other">其他</string>
    <string name="Me">我的</string>
    <string name="WeChatStorageActivity">存储空间</string>
    <string name="Monments">朋友圈</string>
    <string name="Scan">扫一扫</string>
    <string name="Shake">摇一摇</string>
    <string name="Top_Stories">看一看</string>
    <string name="Search">搜一搜</string>
    <string name="People_Nearby">附近的人</string>
    <string name="Message_in_a_Bottle">漂流瓶</string>
    <string name="Shopping">购物</string>
    <string name="Games">游戏</string>
    <string name="Mini_Programs">小程序</string>
    <string name="app_Title">常用工具类</string>
    <string name="Util">常用工具类</string>
    <string name="input_str">请输入任意字符串</string>
    <string name="delete_trim">去掉前后空格</string>
    <string name="getStr">获取处理后的字符串：</string>
    <string name="getTrimStr">获取去掉前后空格后的字符串：</string>
    <string name="getNoBlanStr">获取去掉所有空格后的字符串：</string>
    <string name="getLengthStr">获取字符串的长度：</string>
    <string name="IsNotEmptyStr">判断字符是否非空：</string>
    <string name="IsPhoneStr">判断手机格式是否正确：</string>
    <string name="IsEmailStr">判断Email格式是否正确：</string>
    <string name="IsNumerStr">判断是否全是数字：</string>
    <string name="IsNumberOrAlpha">判断字符类型是否是号码或字母：</string>
    <string name="isIDCard">判断字符类型是否是身份证号：</string>
    <string name="isUrl">判断字符类型是否是网址：</string>
    <string name="isFilePathExist">判断文件路径是否存在：</string>
    <string name="getNumber">去掉str内所有非数字类型字符：</string>
    <string name="getCorrectUrl">自动补全网址：</string>
    <string name="getCorrectPhone">去掉所有空格 、"-" 、"+86" 后的phone：</string>
    <string name="getCorrectEmail">自动补全邮箱：</string>
    <string name="getPrice">获取价格，保留两位小数：</string>
    <string name="stringToDouble">字符串转换成double,失败返回0：</string>
    <string name="stringToInt">字符串转换成整数,失败返回0：</string>
    <string name="showKeyboard">显示键盘</string>
    <string name="hideKeyboard">隐藏键盘</string>
    <string name="hideShowKeyboard">隐藏/显示键盘</string>
    <string name="judgeInvalidCode">判断验证码是否合法</string>
    <string name="judgeInvalidPassword">判断密码是否合法</string>
    <string name="judgeInvalidPhone">判断手机号码是否合法</string>
    <string name="judgeInvalidEmail">判断邮箱是否合法</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_Email">请输入邮箱</string>
    <string name="startNewActivity">打开新的Activity</string>
    <string name="whether_open_Animation">是否开启动画</string>
    <string name="whether_RequestCode">是否带请求码</string>
    <string name="input_args">请输入参数</string>
    <string name="getChannel">获取渠道名:</string>
    <string name="installAPK">启动安装应用程序</string>
    <string name="input_path">请输入Apk路径</string>
    <string name="getApplicationIcon">获取应用程序的Icon图标:</string>
    <string name="getInstalledPackages">获取所有安装的应用程序:</string>
    <string name="getVersionCode">获取版本号:</string>
    <string name="getVersionName">获取应用版本名称:</string>
    <string name="getPackage">获取应用包名：</string>
    <string name="getScreenWidth">获取屏幕宽度：</string>
    <string name="getScreenHeight">获取屏幕高度：</string>
    <string name="getDensity">获取系统dp尺寸密度值：</string>
    <string name="getScaledDensity">获取系统字体sp密度值：</string>
    <string name="getStatusHeight">获得状态栏的高度：</string>
    <string name="getSnapShotWithStatusBar">获取当前屏幕截图,包含状态栏：</string>
    <string name="getSnapShotWithoutStatusBar">获取当前屏幕截图,不包含状态栏：</string>
    <string name="getDisplayMetrics">获取DisplayMetrics对象：</string>
    <string name="getScreenSize">获取屏幕像素点：</string>
    <string name="getStatusBarHeight">获取状态栏的高度：</string>
    <string name="b2d">Bitmap转化为Drawable</string>
    <string name="d2b">Drawable转化为Bitmap</string>
    <string name="getBitmapFromResources">获得Resources的Bitmap资源</string>
    <string name="byte2Bimap">byte[]字节码转为Bitmap</string>
    <string name="Bimap2byte">Bitmap转为字节码byte[]</string>
    <string name="input_filepath">请输入图片路径</string>
    <string name="input_width">设置宽度</string>
    <string name="input_height">设置高度</string>
    <string name="getBitmapFromPath">根据文件路径获取指定大小的Bitmap对象</string>
    <string name="compressImageFromFile">压缩图片</string>
    <string name="zoomImg">缩放/裁剪图片</string>
    <string name="getBitmapFromResource">根据资源id获取指定大小的Bitmap对象</string>
    <string name="getThumbnailsBitmap">获取指定大小的Bitmap对象</string>
    <string name="fileNoExit">未发现该文件</string>
    <string name="error_toast">错误的提示</string>
    <string name="success_toast">成功的提示</string>
    <string name="info_toast">信息的提示</string>
    <string name="warning_toast">警告的提示</string>
    <string name="normal_toast">普通的提示（没有ICON）</string>
    <string name="normal_toast_img">普通的提示（有ICON）</string>
    <string name="sys_toast">系统的提示</string>
    <string name="BottomNavigation_Recommend">BottomNavigation介绍</string>
    <string name="function_unopen">功能暂未开放</string>
    <string name="whether_remove_animation">是否去除动画</string>
    <string name="addView">添加Item</string>
    <string name="reduceView">移除Item</string>
    <string name="addImte">动态添加Item：</string>
    <string name="changeOrientation">水平垂直切换</string>
    <string name="table_Layout">表格布局</string>
    <string name="WaterFall_View">瀑布流布局</string>
    <string name="click_crash">点击异常效果演示</string>
    <string name="DrawerLayout">侧滑菜单</string>
    <string name="scrollable_tab">scrollable tab</string>
    <string name="fixed_tab">fixed tab</string>
    <string name="dynamic_tab">dynamic tab</string>
    <string name="no_tab_only_indicator">no tab, only indicator</string>
    <string name="work_with_fragment_container">work with fragment container</string>
    <string name="tab_with_badge_view">tab with badge view</string>
    <string name="custom_navigator">custom navigator</string>
    <string name="tab_with_custom_layout">load custom layout</string>
    <string name="WeChatFunction">仿微信功能及控件</string>
    <string name="SplashActivity">欢迎界面</string>
    <string name="FontSizeActivity">字体大小</string>
    <string name="save">保存</string>
    <string name="Multi_Language">多语言</string>
    <string name="dataBind_price">价格：%.2f元</string>
    <string name="dataBind_person">人数：%d人</string>
    <string name="URL_Paging">https://www.jianshu.com/p/10bf4bf59122</string>
    <string name="URL_Navigation">https://www.jianshu.com/p/230427ae6830</string>
    <string name="URL_ViewModel">https://www.jianshu.com/p/bc34c2db244f</string>
    <string name="URL_LiveData">https://www.jianshu.com/p/6651046cd4d8</string>
    <string name="URL_Lifecycle2">https://www.jianshu.com/p/798354ed17b9</string>
    <string name="URL_Lifecycle1">https://www.jianshu.com/p/7491750f7988</string>
    <string name="URL_Espresso">https://www.jianshu.com/p/5639c7224490</string>
    <string name="URL_ButterKnife">https://www.jianshu.com/p/db412b48f4db</string>
    <string name="URL_android10">https://www.jianshu.com/p/d25bcbb08665</string>
    <string name="URL_studyResource">https://www.jianshu.com/p/3e71c3337dc5</string>
    <string name="URL_customView">https://www.jianshu.com/p/b6b0d0af0714</string>
    <string name="URL_study03">https://www.jianshu.com/p/e9996296a982</string>
    <string name="URL_study02">https://www.jianshu.com/p/5ac84e8497b5</string>
    <string name="URL_study01">https://www.jianshu.com/p/967bfa0234f9</string>
    <string name="URL_LinDownloadAPk">https://www.jianshu.com/p/3e5af8827157</string>
    <string name="URL_LinNotify">https://www.jianshu.com/p/bc2917c3bca8</string>
    <string name="URL_LinCustomDialog">https://www.jianshu.com/p/ee84b1c2a325</string>
    <string name="URL_AppSizeUtils">https://www.jianshu.com/p/d97c0de8bc18</string>
    <string name="URL_MultiLanguage">https://www.jianshu.com/p/0f957ead4fa0</string>
    <string name="URL_FontSize">https://www.jianshu.com/p/f13b08da22d1</string>
    <string name="URL_JUnit">https://www.jianshu.com/p/762890234f82</string>
    <string name="URL_DataBinding">https://www.jianshu.com/p/7de37ca38d0e</string>
    <string name="URL_BottomNavigation">https://www.jianshu.com/p/5993e8037d4d</string>
    <string name="URL_LOG">https://www.jianshu.com/p/f947d6e77fd1</string>
    <string name="URL_UmengPackage">https://www.jianshu.com/p/bb09d8e18782</string>
    <string name="URL_Umeng">https://www.jianshu.com/p/d93767c806e3</string>
    <string name="URL_Retrofit2">https://www.jianshu.com/p/cb2c375c9105</string>
    <string name="URL_Retrofit1">https://www.jianshu.com/p/81149c0babd1</string>
    <string name="URL_WebView">https://www.jianshu.com/p/3dc06c3dfb7d</string>
    <string name="URL_APK_Sign">https://blog.csdn.net/cs_lwb/article/details/81386595</string>
    <string name="URL_Arithmetic">https://www.jianshu.com/p/a43bd0f44f65</string>
    <string name="URL_DesignMode">https://www.jianshu.com/p/c4c550b8d849</string>
    <string name="whetherConnectWifi">是否连接WIFI </string>
    <string name="whetherConnectMobileNewWork">是否连接移动网络</string>
    <string name="whetherConnectNetWork">是否有网络连接</string>
    <string name="toNetWorkSetting">打开网络设置界面</string>
    <string name="getNetWorkStatus">获取网络状态</string>
    <string name="getDeviceInfo">获取设备信息</string>
    <string name="getAllCatchData">获取所有的缓存数据</string>
    <string name="cleanAllCache">清除所有缓存</string>
    <string name="cleanAppInternalCache">清除本应用内部缓存</string>
    <string name="cleanAppAllData">清除本应用全部数据库</string>
    <string name="cleanAppSp">清除本应用SharedPreference</string>
    <string name="quareCleanAppData">按名字清除本应用数据库</string>
    <string name="data_data_com_xxx_xxx_files">cleanFilesContent</string>
    <string name="cleanExternalCacheContent">清除外部cache下的内容</string>
    <string name="cleanCustomFile">清除自己定义路径下的文件</string>
    <string name="cleanAllData">清除本应用全部的数据</string>
    <string name="QMUI_Android">https://qmuiteam.com/android</string>
    <string name="Url_Android">http://hukai.me/android-training-course-in-chinese/index.html</string>
    <string name="Url_NDK">https://developer.android.google.cn/ndk/</string>
    <string name="Url_Kotlin">https://www.kotlincn.net/docs/reference/extensions.html</string>
    <string name="Url_Java">https://snailclimb.gitee.io/javaguide/#/</string>
    <string name="Url_Git">https://git-scm.com/book/zh/v2</string>
    <string name="Url_GitDemo1">https://github.com/open-android/Android</string>
    <string name="Url_GitDemo2">https://github.com/justjavac/free-programming-books-zh_CN</string>
    <string name="Url_GitDemo3">https://github.com/Trinea/android-open-project</string>
    <string name="Url_GitDemo4">https://github.com/Tim9Liu9/TimLiu-Android#UI</string>
    <string name="Url_GitDemo5">https://github.com/wasabeef/awesome-android-ui</string>
    <string name="Url_GitDemo6">https://github.com/CyC2018/CS-Notes</string>
    <string name="Url_GitDemo7">https://github.com/alibaba/p3c</string>
    <string name="Url_GitDemo8">https://github.com/doocs/advanced-java</string>
    <string name="Url_Google">https://developer.android.google.cn/</string>
    <string name="Url_GoogleChina">https://developers.google.cn/china/</string>
    <string name="Url_AndroidWeekly">https://androidweekly.net/</string>
    <string name="Url_AndroidHive">https://www.androidhive.info/</string>
    <string name="Url_Androidtool">https://www.androiddevtools.cn/</string>
    <string name="Url_Chinagdg">https://chinagdg.org/</string>
    <string name="Url_Tx">https://ke.qq.com/course/list?mt=1001&amp;st=2003&amp;tt=3021&amp;price_min=0&amp;price_max=0</string>
    <string name="Url_JK">http://wiki.jikexueyuan.com/list/android/</string>
    <string name="Url_GL">http://www.gulixueyuan.com/path/android</string>
    <string name="Url_MK">https://coding.imooc.com/?c=android</string>
    <string name="Url_GG">http://www.atguigu.com/android_video.shtml#android</string>
    <string name="Url_zc">https://www.zcool.com.cn/work/ZMzY0MDAwMjA=.html</string>
</resources>