<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_showKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showKeyboard" />

    <Button
        android:id="@+id/btn_hideKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hideKeyboard" />

    <Button
        android:id="@+id/hide_showKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hideShowKeyboard" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/judge_Invalid_Code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judgeInvalidCode" />
        <EditText
            android:id="@+id/et_input_code"
            style="@style/EditText_text"
            android:inputType="number"
            android:hint="@string/input_code"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/judge_Invalid_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judgeInvalidPassword" />
        <EditText
            android:id="@+id/et_input_password"
            style="@style/EditText_text"
            android:hint="@string/input_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/judge_Invalid_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judgeInvalidPhone" />
        <EditText
            android:id="@+id/et_input_phone"
            style="@style/EditText_text"
            android:hint="@string/input_phone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/judge_Invalid_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judgeInvalidEmail" />
        <EditText
            android:id="@+id/et_input_Email"
            style="@style/EditText_text"
            android:hint="@string/input_Email"/>
    </LinearLayout>


</LinearLayout>